# lemmeknow

./: Cargo.toml  LICENSE  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: continuous_integration.yml  cross_compile.yml
benches/: my_benchmark.rs
src/: lib.rs  main.rs
src/data/: regex.json
src/filter/: mod.rs
src/identifier/: bytes.rs  mod.rs
src/identify/: mod.rs
src/output/: mod.rs
tests/: cli.rs  identifier_check.rs  validate_regexes.rs
