[package]
name = "lemmeknow"
version = "0.7.0"
edition = "2021"
authors = ["swanandx"]
description = "Identify any mysterious text or analyze strings from a file"
readme = "README.md"
repository = "https://github.com/swanandx/lemmeknow"
homepage = "https://github.com/swanandx/lemmeknow"
license = "MIT"
keywords = ["cryptography", "cybersecurity", "regex", "forensics", "identify"]
categories = ["accessibility", "command-line-utilities", "text-processing", "parsing", "encoding"]
documentation = "https://docs.rs/lemmeknow"
exclude = ["images/", ".github/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lemmeknow"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
default = ["cli"]
cli = ["comfy-table", "clap"]

[[bin]]
name = "lemmeknow"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
once_cell = "1.13.0"
regex = "1.6"
# onig = { version="6.4", default-features=false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5"
comfy-table = { version = "6.0.0", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2.1"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.10"

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"
