[package]
name = "lemmeknow"
version = "0.8.0"
edition = "2021"
authors = ["swanandx"]
description = "Identify any mysterious text or analyze strings from a file"
readme = "README.md"
repository = "https://github.com/swanandx/lemmeknow"
homepage = "https://github.com/swanandx/lemmeknow"
license = "MIT"
keywords = ["cryptography", "cybersecurity", "regex", "forensics", "identify"]
categories = ["command-line-utilities", "text-processing", "parsing", "wasm"]
documentation = "https://docs.rs/lemmeknow"
exclude = ["images/", ".github/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lemmeknow"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
default = ["cli"]
cli = ["comfy-table", "clap"]

[[bin]]
name = "lemmeknow"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
once_cell = "1.17.1"
regex = "1.8"
# onig = { version="6.4", default-features=false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.7"
comfy-table = { version = "6.1.4", optional = true }
clap = { version = "4.3", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.11"
regex = "1.8"

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"
